--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.amirghm.funda.funda_assignment">
+    package="com.amirghm.funda">
    <application
-        android:label="funda_assignment"
+        android:label="Funda Sample"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
