--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,17 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.5
+  carousel_slider: ^4.0.0
+  photo_view: ^0.11.1
+  cached_network_image: ^3.0.0
+  dots_indicator: ^2.0.0
+  smooth_page_indicator: ^0.2.3
+  dismissible_page: ^0.6.3
+  share: ^2.0.4
+  flutter_cache_manager: ^3.1.1
+  flutter_html: ^2.1.1
+  expand_widget: ^2.1.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
