- add viewmodel and fetch data from the repository - add viewmodel tests - cleanup code

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.amirghm.funda">
    <application
         android:label="Funda Sample"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
