--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fund_sample
+name: funda_sample
 description: A new Flutter project.
 publish_to: 'none'
 version: 1.0.0+1
@@ -24,6 +24,8 @@ dependencies:
   flutter_html: ^2.1.1
   expand_widget: ^2.1.0
   url_launcher: ^6.0.9
+  provider: ^6.0.0
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
